--- a/JacalKinopoisk/JacalKinopoisk/pom.xml
+++ b/JacalKinopoisk/JacalKinopoisk/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.5.2.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
